added blue icon

--- a/slither-io/index.html
+++ b/slither-io/index.html
@@ -17,12 +17,12 @@
 <body>
     <script>
     (function() {
-        var game = new Phaser.Game(800, 500, Phaser.AUTO, null);
+        var game = new Phaser.Game(900, 500, Phaser.AUTO, null);
 
         game.state.add('Game', Game);
         game.state.start('Game');
     })();
     </script>
-    Hi Liam!
+    Bye have fun Liam!
 </body>
 </html>
