first stab at changing size and login system

--- a/slither-io/index.html
+++ b/slither-io/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+test
     <meta charset="utf-8" />
     <title>Slither.io Clone - Loonride Example</title>
     <script src="lib/phaser.min.js"></script>
@@ -17,7 +18,7 @@
 <body>
     <script>
     (function() {
-        var game = new Phaser.Game(900, 500, Phaser.AUTO, null);
+        var game = new Phaser.Game(1500,900, 1500, Phaser.AUTO, null);
 
         game.state.add('Game', Game);
         game.state.start('Game');
@@ -26,3 +27,26 @@
     Bye have fun Liam!
 </body>
 </html>
+test
+<head>
+ <style type ="text/css" >
+   .footer{ 
+       position: fixed;     
+       text-align: center;    
+       bottom: 0px; 
+       width: 100%;
+   }  
+</style>
+</head>
+<body>
+    <div class="footer">liams game</div>
+</body>
+<p align="right">liams game.</p>
+<form action="/action_page.php">
+  First name:<br>
+  <input type="text" name="firstname" value="username"><br>
+  Last name:<br>
+  <input type="text" name="lastname" value="password"><br><br>
+  <input type="submit" value="Submit">
+</form>
+
