--- a/slither-io/index.html
+++ b/slither-io/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Slither.io Clone - by liam</title>
-    <script src="lib/phaser.js"></script>
+    <script src="lib/phaser.min.js"></script>
     <script src="src/game.js"></script>
     <script src="src/snake.js"></script>
     <script src="src/playerSnake.js"></script>
