got code to display dimensions
no button

--- a/slither-io/index.html
+++ b/slither-io/index.html
@@ -17,7 +17,7 @@
   <body>
       <script>
       (function() {
-          var game = new Phaser.Game(800, 500, Phaser.AUTO, null);
+          var game = new Phaser.Game(1000, 1000,  Phaser.AUTO, null);
 
           game.state.add('Game', Game);
           game.state.start('Game');
@@ -25,3 +25,33 @@
       </script>
   </body>
   </html>
+  <script>
+/* Get the documentElement (<html>) to display the page in fullscreen */
+var elem = document.documentElement;
+
+/* View in fullscreen */
+function openFullscreen() {
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.mozRequestFullScreen) { /* Firefox */
+    elem.mozRequestFullScreen();
+  } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE/Edge */
+    elem.msRequestFullscreen();
+  }
+}
+
+/* Close fullscreen */
+function closeFullscreen() {
+  if (document.exitFullscreen) {
+    document.exitFullscreen();
+  } else if (document.mozCancelFullScreen) { /* Firefox */
+    document.mozCancelFullScreen();
+  } else if (document.webkitExitFullscreen) { /* Chrome, Safari and Opera */
+    document.webkitExitFullscreen();
+  } else if (document.msExitFullscreen) { /* IE/Edge */
+    document.msExitFullscreen();
+  }
+}
+</script>
