got game to resize
made it soo the game can see size of browser and resize acorrding to the size of the browser window

--- a/slither-io/index.html
+++ b/slither-io/index.html
@@ -15,9 +15,13 @@
     <script src="src/util.js"></script>
   </head>
   <body>
+
       <script>
+
       (function() {
-          var game = new Phaser.Game(1000, 1000,  Phaser.AUTO, null);
+        var w = window.innerWidth;
+        var h = window.innerHeight;
+          var game = new Phaser.Game(w, h,  Phaser.AUTO, null);
 
           game.state.add('Game', Game);
           game.state.start('Game');
