--- a/slither-io/index-button.html
+++ b/slither-io/index-button.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8" />
+    <title>Slither.io Clone - by liam</title>
+    <script src="lib/jquery-3.3.1.min.js"></script>
+  </head>
 <body onload="myFunction()">
 <p>Click the button to display this frame's height and width.</p>
 
